[project]
name = "portal-vagas"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcelo Santos",email = "rocha.mer21@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.46.1,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "portal_vagas", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
